--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,17 +7,17 @@
 html[data-theme="light"] {
   --background: #fdfdfd;
   --foreground: #282728;
-  --accent: #006cac;
-  --muted: #e6e6e6;
+  --accent: #40a829;
+  --muted: #55DD33;
   --border: #ece9e9;
 }
 
 html[data-theme="dark"] {
   --background: #212737;
   --foreground: #eaedf3;
-  --accent: #ff6b01;
+  --accent: #44d62c;
   --muted: #343f60;
-  --border: #ab4b08;
+  --border: #66ff00;
 }
 
 @theme inline {
