--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -69,18 +69,23 @@ const isActive = (path: string) => {
           ]}
         >
           <li class="col-span-2">
+            <a href="/projects" class:list={{ "active-nav": isActive("/projects") }}>
+              Work
+            </a>
+          </li>
+          <li class="col-span-2">
+            <a href="/media" class:list={{ "active-nav": isActive("/media") }}>
+              Media
+            </a>
+          </li>
+          <li class="col-span-2">
             <a href="/posts" class:list={{ "active-nav": isActive("/posts") }}>
-              Posts
+              Writing
             </a>
           </li>
           <li class="col-span-2">
             <a href="/tags" class:list={{ "active-nav": isActive("/tags") }}>
               Tags
-            </a>
-          </li>
-          <li class="col-span-2">
-            <a href="/about" class:list={{ "active-nav": isActive("/about") }}>
-              About
             </a>
           </li>
           {
