--- a/src/layouts/PostDetails.astro
+++ b/src/layouts/PostDetails.astro
@@ -129,6 +129,23 @@ const nextPost =
 
     <ShareLinks />
 
+    <script src="https://giscus.app/client.js"
+        data-repo="yadvr/yadvr.github.io"
+        data-repo-id="MDEwOlJlcG9zaXRvcnkzMDU5Nzk2"
+        data-category="Comments"
+        data-category-id="DIC_kwDOAC6wVM4Cwbtd"
+        data-mapping="pathname"
+        data-strict="0"
+        data-reactions-enabled="1"
+        data-emit-metadata="0"
+        data-input-position="top"
+        data-theme="preferred_color_scheme"
+        data-lang="en"
+        data-loading="lazy"
+        crossorigin="anonymous"
+        async>
+    </script>
+
     <hr class="my-6 border-dashed" />
 
     <!-- Previous/Next Post Buttons -->
