--- a/src/pages/posts/[...page].astro
+++ b/src/pages/posts/[...page].astro
@@ -7,7 +7,9 @@ import Header from "@/components/Header.astro";
 import Footer from "@/components/Footer.astro";
 import Card from "@/components/Card.astro";
 import Pagination from "@/components/Pagination.astro";
+import Tag from "@/components/Tag.astro";
 import getSortedPosts from "@/utils/getSortedPosts";
+import getUniqueTags from "@/utils/getUniqueTags";
 import { SITE } from "@/config";
 
 export const getStaticPaths = (async ({ paginate }) => {
@@ -16,11 +18,20 @@ export const getStaticPaths = (async ({ paginate }) => {
 }) satisfies GetStaticPaths;
 
 const { page } = Astro.props;
+
+import { SITE } from "@/config";
+
+const posts = await getCollection("blog");
+
+let tags = getUniqueTags(posts);
 ---
 
 <Layout title={`Writing | ${SITE.title}`}>
   <Header />
   <Main pageTitle="Writing" pageDesc="All the articles I've posted.">
+    <ul>
+      {tags.map(({ tag, tagName }) => <Tag {tag} {tagName} size="lg" />)}
+    </ul>
     <ul>
       {page.data.map(data => <Card {...data} />)}
     </ul>
