--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,6 +3,10 @@
 
 @custom-variant dark (&:where([data-theme=dark], [data-theme=dark] *));
 
+:root {
+  --container-3xl: 60rem;
+}
+
 :root,
 html[data-theme="light"] {
   --background: #fffcf5;
